Выполнен рефакторинг css

--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!--Site heading-->
     <header class="page-header">
       <div class="header-container container">
         <nav class="navigation">
-          <a href="./index.html" class="logo"
-            ><span class="accent-logo">Web</span>Studio</a
-          >
+          <a href="./index.html" class="logo"><span class="accent-logo">Web</span>Studio</a>
           <ul class="nav-list list">
             <li class="item">
               <a href="./index.html" class="link current">Студия</a>
@@ -59,9 +58,7 @@
       <section class="hero">
         <div class="hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="main-button" data-modal-open>
-            Заказать услугу
-          </button>
+          <button type="button" class="main-button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       <!--Advantages-->
@@ -76,8 +73,7 @@
               </div>
               <h3 class="title">Внимание к деталям</h3>
               <p>
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="advantages-item">
@@ -88,8 +84,7 @@
               </div>
               <h3 class="title">Пунктуальность</h3>
               <p>
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="advantages-item">
@@ -100,8 +95,7 @@
               </div>
               <h3 class="title">Планирование</h3>
               <p>
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
+                Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="advantages-item">
@@ -111,10 +105,7 @@
                 </svg>
               </div>
               <h3 class="title">Современные технологии</h3>
-              <p>
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
-              </p>
+              <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
           </ul>
         </div>
@@ -136,23 +127,13 @@
               </div>
             </li>
             <li class="work-item">
-              <img
-                src="./images/box2.jpg"
-                alt="телефон в руках"
-                width="370"
-                class="work-image"
-              />
+              <img src="./images/box2.jpg" alt="телефон в руках" width="370" class="work-image" />
               <div class="work-text-wrapper">
                 <p class="work-text">Мобильные приложения</p>
               </div>
             </li>
             <li class="work-item">
-              <img
-                src="./images/box3.jpg"
-                alt="планшет в руках"
-                width="370"
-                class="work-image"
-              />
+              <img src="./images/box3.jpg" alt="планшет в руках" width="370" class="work-image" />
 
               <p class="work-text">Дизайнерские решения</p>
             </li>
@@ -165,12 +146,7 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-list list">
             <li class="team-item">
-              <img
-                class="team-image"
-                src="./images/foto1.jpg"
-                alt="фото мужчины"
-                width="270"
-              />
+              <img class="team-image" src="./images/foto1.jpg" alt="фото мужчины" width="270" />
               <div class="team-item-description">
                 <h3 class="title">Игорь Демьяненко</h3>
                 <p class="text">Product Designer</p>
@@ -208,12 +184,7 @@
             </li>
 
             <li class="team-item">
-              <img
-                class="team-image"
-                src="./images/foto2.jpg"
-                alt="фото женщины"
-                width="270"
-              />
+              <img class="team-image" src="./images/foto2.jpg" alt="фото женщины" width="270" />
               <div class="team-item-description">
                 <h3 class="title">Ольга Репина</h3>
                 <p class="text">Frontend Developer</p>
@@ -251,12 +222,7 @@
             </li>
 
             <li class="team-item">
-              <img
-                class="team-image"
-                src="./images/foto3.jpg"
-                alt="фото мужчины"
-                width="270"
-              />
+              <img class="team-image" src="./images/foto3.jpg" alt="фото мужчины" width="270" />
               <div class="team-item-description">
                 <h3 class="title">Николай Тарасов</h3>
                 <p class="text">Marketing</p>
@@ -294,12 +260,7 @@
             </li>
 
             <li class="team-item">
-              <img
-                class="team-image"
-                src="./images/foto4.jpg"
-                alt="фото мужчины"
-                width="270"
-              />
+              <img class="team-image" src="./images/foto4.jpg" alt="фото мужчины" width="270" />
               <div class="team-item-description">
                 <h3 class="title">Михаил Ермаков</h3>
                 <p class="text">UI Designer</p>
@@ -395,22 +356,16 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="container-address">
-          <a href="./index.html" class="logo-light"
-            ><span class="accent-logo">Web</span>Studio</a
-          >
+          <a href="./index.html" class="logo-light"><span class="accent-logo">Web</span>Studio</a>
           <ul class="footer-contacts list">
             <li class="footer-item">
               <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
             </li>
             <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="footer-contact"
-                >info@devstudio.com</a
-              >
+              <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a>
             </li>
             <li class="footer-item">
-              <a href="tel:+380961111111" class="footer-contact"
-                >+38 096 111 11 11</a
-              >
+              <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a>
             </li>
           </ul>
         </div>
