--- a/portfolio.html
+++ b/portfolio.html
@@ -18,32 +18,32 @@
   </head>
   <body>
     <!--Site heading-->
-    <header class="page-header">
+    <header class="header">
       <div class="header-container container">
-        <nav class="navigation">
-          <a href="./index.html" class="logo"
+        <nav class="header__nav">
+          <a href="./index.html" class="logo header__logo link"
             ><span class="accent-logo">Web</span>Studio</a
           >
-          <ul class="nav-list list">
-            <li class="item"><a href="./index.html" class="link">Студия</a></li>
-            <li class="item">
-              <a href="./portfolio.html" class="link current">Портфолио</a>
+          <ul class="menu list">
+            <li class="menu__item"><a href="./index.html" class="menu__link link">Студия</a></li>
+            <li class="menu__item">
+              <a href="./portfolio.html" class="menu__link link current">Портфолио</a>
             </li>
-            <li class="item"><a href="" class="link">Контакты</a></li>
+            <li class="menu__item"><a href="" class="menu__link link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contacts-nav list">
-          <li class="item">
-            <a class="contact-link link" href="mailto:info@devstudio.com">
-              <svg class="contact-icon" width="16" height="12">
+        <ul class="contacts list">
+          <li class="contacts__item">
+            <a class="contacts__link link" href="mailto:info@devstudio.com">
+              <svg class="contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="item">
-            <a class="contact-link link" href="tel:+380961111111">
-              <svg class="contact-icon" width="10" height="16">
+          <li class="contacts__item">
+            <a class="contacts__link link" href="tel:+380961111111">
+              <svg class="contacts__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-tel"></use>
               </svg>
               +38 096 111 11 11
@@ -291,28 +291,22 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="container-address">
-          <a href="./index.html" class="logo-light"
-            ><span class="accent-logo">Web</span>Studio</a
-          >
+          <a href="./index.html" class="logo-light"><span class="accent-logo">Web</span>Studio</a>
           <ul class="footer-contacts list">
             <li class="footer-item">
               <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
             </li>
             <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="footer-contact"
-                >info@devstudio.com</a
-              >
+              <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a>
             </li>
             <li class="footer-item">
-              <a href="tel:+380961111111" class="footer-contact"
-                >+38 096 111 11 11</a
-              >
+              <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a>
             </li>
           </ul>
         </div>
         <div class="container-social-list">
           <h3 class="social-list-title title">присоединяйтесь</h3>
-          <ul class="social-list list">
+          <ul class="social-list-footer list">
             <li class="social-list-item">
               <a href="" class="social-list-link link">
                 <svg class="social-list-icon">
