--- a/index.html
+++ b/index.html
@@ -19,32 +19,34 @@
   </head>
   <body>
     <!--Site heading-->
-    <header class="page-header">
+    <header class="header">
       <div class="header-container container">
-        <nav class="navigation">
-          <a href="./index.html" class="logo"><span class="accent-logo">Web</span>Studio</a>
-          <ul class="nav-list list">
-            <li class="item">
-              <a href="./index.html" class="link current">Студия</a>
+        <nav class="header__nav">
+          <a href="./index.html" class="logo header__logo link"
+            ><span class="accent-logo">Web</span>Studio</a
+          >
+          <ul class="menu list">
+            <li class="menu__item">
+              <a href="./index.html" class="menu__link link current">Студия</a>
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+            <li class="menu__item">
+              <a href="./portfolio.html" class="menu__link link">Портфолио</a>
             </li>
-            <li class="item"><a href="" class="link">Контакты</a></li>
+            <li class="menu__item"><a href="" class="menu__link link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contacts-nav list">
-          <li class="item">
-            <a class="contact-link link" href="mailto:info@devstudio.com">
-              <svg class="contact-icon" width="16" height="12">
+        <ul class="contacts list">
+          <li class="contacts__item">
+            <a class="contacts__link link" href="mailto:info@devstudio.com">
+              <svg class="contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="item">
-            <a class="contact-link link" href="tel:+380961111111">
-              <svg class="contact-icon" width="10" height="16">
+          <li class="contacts__item">
+            <a class="contacts__link link" href="tel:+380961111111">
+              <svg class="contacts__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-tel"></use>
               </svg>
               +38 096 111 11 11
