переименованы секции до team

--- a/index.html
+++ b/index.html
@@ -59,85 +59,90 @@
     <main>
       <section class="hero">
         <div class="hero-container">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="main-button" data-modal-open>Заказать услугу</button>
+          <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       <!--Advantages-->
       <section class="section advantages-section">
         <div class="container">
-          <ul class="advantages-list list">
-            <li class="advantages-item">
-              <div class="advantages-icon-container">
-                <svg class="advantages-icon" width="70" height="70">
+          <ul class="advantages__list list">
+            <li class="advantages__item">
+              <div class="advantages__icon-container">
+                <svg class="advantages__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="title">Внимание к деталям</h3>
+              <h3 class="advantages__title">Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="advantages-item">
-              <div class="advantages-icon-container">
-                <svg class="advantages-icon" width="70" height="70">
+            <li class="advantages__item">
+              <div class="advantages__icon-container">
+                <svg class="advantages__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="title">Пунктуальность</h3>
+              <h3 class="advantages__title">Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="advantages-item">
-              <div class="advantages-icon-container">
-                <svg class="advantages-icon" width="70" height="70">
+            <li class="advantages__item">
+              <div class="advantages__icon-container">
+                <svg class="advantages__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="title">Планирование</h3>
+              <h3 class="advantages__title">Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="advantages-item">
-              <div class="advantages-icon-container">
-                <svg class="advantages-icon" width="70" height="70">
+            <li class="advantages__item">
+              <div class="advantages__icon-container">
+                <svg class="advantages__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="title">Современные технологии</h3>
+              <h3 class="advantages__title">Современные технологии</h3>
               <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
           </ul>
         </div>
       </section>
       <!--Our work-->
-      <section class="section ourwork-section">
+      <section class="ourwork-section section">
         <div class="container">
-          <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="work-list list">
-            <li class="work-item">
+          <h2 class="ourwork__title section-title">Чем мы занимаемся</h2>
+          <ul class="ourwork__list list">
+            <li class="ourwork__item">
               <img
                 src="./images/box1.jpg"
                 alt="человек набирает текст на клавиатуре"
                 width="370"
-                class="work-image"
+                class="ourwork__image"
               />
-              <div class="work-text-wrapper">
-                <p class="work-text">Десктопные приложения</p>
-              </div>
+              <p class="ourwork__text">Десктопные приложения</p>
             </li>
-            <li class="work-item">
-              <img src="./images/box2.jpg" alt="телефон в руках" width="370" class="work-image" />
-              <div class="work-text-wrapper">
-                <p class="work-text">Мобильные приложения</p>
-              </div>
+            <li class="ourwork__item">
+              <img
+                src="./images/box2.jpg"
+                alt="телефон в руках"
+                width="370"
+                class="ourwork__image"
+              />
+              <p class="ourwork__text">Мобильные приложения</p>
             </li>
-            <li class="work-item">
-              <img src="./images/box3.jpg" alt="планшет в руках" width="370" class="work-image" />
-
-              <p class="work-text">Дизайнерские решения</p>
+            <li class="ourwork__item">
+              <img
+                src="./images/box3.jpg"
+                alt="планшет в руках"
+                width="370"
+                class="ourwork__image"
+              />
+              <p class="ourwork__text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
@@ -145,13 +150,13 @@
       <!--Our team-->
       <section class="section team-section">
         <div class="container team-container">
-          <h2 class="section-title">Наша команда</h2>
-          <ul class="team-list list">
-            <li class="team-item">
-              <img class="team-image" src="./images/foto1.jpg" alt="фото мужчины" width="270" />
-              <div class="team-item-description">
-                <h3 class="title">Игорь Демьяненко</h3>
-                <p class="text">Product Designer</p>
+          <h2 class="team__title section-title">Наша команда</h2>
+          <ul class="team__list list">
+            <li class="team__item">
+              <img class="team__image" src="./images/foto1.jpg" alt="фото мужчины" width="270" />
+              <div class="team__item-wrapper">
+                <h3 class="team__name">Игорь Демьяненко</h3>
+                <p class="team__text">Product Designer</p>
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link link">
@@ -185,11 +190,11 @@
               </div>
             </li>
 
-            <li class="team-item">
-              <img class="team-image" src="./images/foto2.jpg" alt="фото женщины" width="270" />
-              <div class="team-item-description">
-                <h3 class="title">Ольга Репина</h3>
-                <p class="text">Frontend Developer</p>
+            <li class="team__item">
+              <img class="team__image" src="./images/foto2.jpg" alt="фото женщины" width="270" />
+              <div class="team__item-wrapper">
+                <h3 class="team__name">Ольга Репина</h3>
+                <p class="team__text">Frontend Developer</p>
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link link">
@@ -223,11 +228,11 @@
               </div>
             </li>
 
-            <li class="team-item">
-              <img class="team-image" src="./images/foto3.jpg" alt="фото мужчины" width="270" />
-              <div class="team-item-description">
-                <h3 class="title">Николай Тарасов</h3>
-                <p class="text">Marketing</p>
+            <li class="team__item">
+              <img class="team__image" src="./images/foto3.jpg" alt="фото мужчины" width="270" />
+              <div class="team__item-wrapper">
+                <h3 class="team__name">Николай Тарасов</h3>
+                <p class="team__text">Marketing</p>
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link link">
@@ -261,11 +266,11 @@
               </div>
             </li>
 
-            <li class="team-item">
-              <img class="team-image" src="./images/foto4.jpg" alt="фото мужчины" width="270" />
-              <div class="team-item-description">
-                <h3 class="title">Михаил Ермаков</h3>
-                <p class="text">UI Designer</p>
+            <li class="team__item">
+              <img class="team__image" src="./images/foto4.jpg" alt="фото мужчины" width="270" />
+              <div class="team__item-wrapper">
+                <h3 class="team__name">Михаил Ермаков</h3>
+                <p class="team__text">UI Designer</p>
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link link">
