переименовала по BEM до футера

--- a/portfolio.html
+++ b/portfolio.html
@@ -291,46 +291,50 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="container-address">
-          <a href="./index.html" class="logo-light"><span class="accent-logo">Web</span>Studio</a>
+          <a href="./index.html" class="logo-light link"
+            ><span class="accent-logo">Web</span>Studio</a
+          >
           <ul class="footer-contacts list">
-            <li class="footer-item">
-              <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+            <li class="footer-contacts__item">
+              <address class="footer-contacts__address">г. Киев, пр-т Леси Украинки, 26</address>
             </li>
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a>
+            <li class="footer-contacts__item">
+              <a href="mailto:info@devstudio.com" class="footer-contacts__link link"
+                >info@devstudio.com</a
+              >
             </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a>
+            <li class="footer-contacts__item">
+              <a href="tel:+380961111111" class="footer-contacts__link link">+38 096 111 11 11</a>
             </li>
           </ul>
         </div>
         <div class="container-social-list">
-          <h3 class="social-list-title title">присоединяйтесь</h3>
-          <ul class="social-list-footer list">
-            <li class="social-list-item">
-              <a href="" class="social-list-link link">
-                <svg class="social-list-icon">
+          <h3 class="social__title title">присоединяйтесь</h3>
+          <ul class="social__list-footer list">
+            <li class="social__item">
+              <a href="" class="social__link link">
+                <svg class="social__icon">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list-item">
-              <a href="" class="social-list-link link">
-                <svg class="social-list-icon">
+            <li class="social__item">
+              <a href="" class="social__link link">
+                <svg class="social__icon">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list-item">
-              <a href="" class="social-list-link link">
-                <svg class="social-list-icon">
+            <li class="social__item">
+              <a href="" class="social__link link">
+                <svg class="social__icon">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list-item">
-              <a href="" class="social-list-link link">
-                <svg class="social-list-icon">
+            <li class="social__item">
+              <a href="" class="social__link link">
+                <svg class="social__icon">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -338,18 +342,18 @@
           </ul>
         </div>
         <div class="container-footer-form">
-          <p class="footer-form-title">Подпишитесь на рассылку</p>
+          <p class="footer-form__title">Подпишитесь на рассылку</p>
           <form action="#" class="footer-form">
             <input
               type="email"
               name="user-email"
-              class="footer-form-input"
+              class="footer-form__input"
               placeholder="E-mail"
               required
             />
-            <button type="submit" class="footer-form-button">
+            <button type="submit" class="footer-form__button">
               <span>Подписаться</span>
-              <svg class="footer-form-icon" width="24" height="24">
+              <svg class="footer-form__icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
