--- a/index.html
+++ b/index.html
@@ -157,31 +157,31 @@
               <div class="team__item-wrapper">
                 <h3 class="team__name">Игорь Демьяненко</h3>
                 <p class="team__text">Product Designer</p>
-                <ul class="social-list list">
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                <ul class="social__list list">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -195,31 +195,31 @@
               <div class="team__item-wrapper">
                 <h3 class="team__name">Ольга Репина</h3>
                 <p class="team__text">Frontend Developer</p>
-                <ul class="social-list list">
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                <ul class="social__list list">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -233,31 +233,31 @@
               <div class="team__item-wrapper">
                 <h3 class="team__name">Николай Тарасов</h3>
                 <p class="team__text">Marketing</p>
-                <ul class="social-list list">
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                <ul class="social__list list">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -271,31 +271,31 @@
               <div class="team__item-wrapper">
                 <h3 class="team__name">Михаил Ермаков</h3>
                 <p class="team__text">UI Designer</p>
-                <ul class="social-list list">
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                <ul class="social__list list">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-icon">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -311,46 +311,46 @@
 
       <section class="section clients-section">
         <div class="container">
-          <h2 class="section-title">Постоянные клиенты</h2>
-          <ul class="clients-list list">
+          <h2 class="clients__title section-title">Постоянные клиенты</h2>
+          <ul class="clients__list list">
             <li>
-              <a class="client-link link" href="">
-                <svg class="client-icon" width="41" height="47">
+              <a class="clients__link" href="">
+                <svg class="clients__icon" width="41" height="47">
                   <use href="./images/icons.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="client-link link" href="">
-                <svg class="client-icon" width="40" height="52">
+              <a class="clients__link link" href="">
+                <svg class="clients__icon" width="40" height="52">
                   <use href="./images/icons.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="client-link link" href="">
-                <svg class="client-icon" width="44" height="42">
+              <a class="clients__link link" href="">
+                <svg class="clients__icon" width="44" height="42">
                   <use href="./images/icons.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="client-link link" href="">
-                <svg class="client-icon" width="85" height="41">
+              <a class="clients__link link" href="">
+                <svg class="clients__icon" width="85" height="41">
                   <use href="./images/icons.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="client-link link" href="">
-                <svg class="client-icon" width="63" height="46">
+              <a class="clients__link link" href="">
+                <svg class="clients__icon" width="63" height="46">
                   <use href="./images/icons.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="client-link link" href="">
-                <svg class="client-icon" width="94" height="44">
+              <a class="clients__link link" href="">
+                <svg class="clients__icon" width="94" height="44">
                   <use href="./images/icons.svg#icon-client6"></use>
                 </svg>
               </a>
@@ -363,46 +363,50 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="container-address">
-          <a href="./index.html" class="logo-light"><span class="accent-logo">Web</span>Studio</a>
+          <a href="./index.html" class="logo-light link"
+            ><span class="accent-logo">Web</span>Studio</a
+          >
           <ul class="footer-contacts list">
-            <li class="footer-item">
-              <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+            <li class="footer-contacts__item">
+              <address class="footer-contacts__address">г. Киев, пр-т Леси Украинки, 26</address>
             </li>
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a>
+            <li class="footer-contacts__item">
+              <a href="mailto:info@devstudio.com" class="footer-contacts__link link"
+                >info@devstudio.com</a
+              >
             </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a>
+            <li class="footer-contacts__item">
+              <a href="tel:+380961111111" class="footer-contacts__link link">+38 096 111 11 11</a>
             </li>
           </ul>
         </div>
         <div class="container-social-list">
-          <h3 class="social-list-title title">присоединяйтесь</h3>
-          <ul class="social-list-footer list">
-            <li class="social-list-item">
-              <a href="" class="social-list-link link">
-                <svg class="social-list-icon">
+          <h3 class="social__title title">присоединяйтесь</h3>
+          <ul class="social__list-footer list">
+            <li class="social__item">
+              <a href="" class="social__link link">
+                <svg class="social__icon">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list-item">
-              <a href="" class="social-list-link link">
-                <svg class="social-list-icon">
+            <li class="social__item">
+              <a href="" class="social__link link">
+                <svg class="social__icon">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list-item">
-              <a href="" class="social-list-link link">
-                <svg class="social-list-icon">
+            <li class="social__item">
+              <a href="" class="social__link link">
+                <svg class="social__icon">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list-item">
-              <a href="" class="social-list-link link">
-                <svg class="social-list-icon">
+            <li class="social__item">
+              <a href="" class="social__link link">
+                <svg class="social__icon">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -410,18 +414,18 @@
           </ul>
         </div>
         <div class="container-footer-form">
-          <p class="footer-form-title">Подпишитесь на рассылку</p>
+          <p class="footer-form__title">Подпишитесь на рассылку</p>
           <form action="#" class="footer-form">
             <input
               type="email"
               name="user-email"
-              class="footer-form-input"
+              class="footer-form__input"
               placeholder="E-mail"
               required
             />
-            <button type="submit" class="footer-form-button">
+            <button type="submit" class="footer-form__button">
               <span>Подписаться</span>
-              <svg class="footer-form-icon" width="24" height="24">
+              <svg class="footer-form__icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
